Fix data type handling for deceasedOnYear and update deceasedOn parsing in Valitive classes; clean up package.xml and comment out unused code in hello.apex

--- a/force-app/main/default/classes/ValitiveClientMock.cls
+++ b/force-app/main/default/classes/ValitiveClientMock.cls
@@ -367,7 +367,7 @@ public class ValitiveClientMock {
                         'personId' => 'mock-person-id',
                         'personLegalId' => '198403239846',
                         'deceasedOnMonth' => '2021-08',
-                        'deceasedOnYear' => 2021,
+                        'deceasedOnYear' => '2021',
                         'deceasedOn' => '2021-08-23T14:55:05.327Z'
                     }
                 },
