Add ContactValitiveEventMapping and SyncContactValitiveStateBatch classes; update package.xml and enhance ValitiveQueryParams with new constants

--- a/force-app/main/default/classes/ContactValitiveEventMapping.cls
+++ b/force-app/main/default/classes/ContactValitiveEventMapping.cls
@@ -59,7 +59,7 @@ public class ContactValitiveEventMapping {
             return con;
         }
         con.MailingStreet = constructAdressSteetString(event);
-        con.MailingCity = event.City__c;
+        con.MailingCity = event.City__c.toUpperCase();
         con.MailingState = event.County__c;
         con.MailingPostalCode = formatZipCode(event.Zip__c);
         // con.MailingCountry = event.Country__c;
